tests/errors/surf_parse_04.ki
# PARSER: a switch header missing the ':' after its subject
switch 1
    case 1:
        discard 1